--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "arkanoid",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://iglaa.github.io/arkanoid-react",
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
