--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "arkanoid",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://iglaa.github.io/arkanoid-react",
+  "homepage": "https://iglaa.github.io/arkanoid",
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
